# sheshbesh

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  RULES_RU.txt  fly.toml
deploy/: nginx.conf
examples/: compare.rs  export_linear.rs  export_model.rs  train_loop.rs  train_tui.rs
frontend/: Cargo.toml  build-worker.sh  index.html
frontend/ai-worker/: Cargo.toml
frontend/ai-worker/src/: lib.rs
frontend/public/: worker.js
frontend/src/: ai_worker.rs  app.rs  controls.rs  demo.rs  geom.rs  lessons.rs  main.rs  model.rs  moves_ui.rs  net.rs  settings.rs  util.rs  view.rs
sheshbesh-server/: Cargo.toml
sheshbesh-server/src/: main.rs  persist.rs  protocol.rs
src/: ai.rs  app.rs  board.rs  dice.rs  encode.rs  eval.rs  learn.rs  lib.rs  main.rs  moves.rs  render.rs  search.rs  state.rs  tui.rs  turn.rs  value.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
