[workspace]
members = ["frontend", "src-tauri"]

[package]
name = "sheshbesh"
version = "0.1.0"
edition = "2024"

# Бинарник-TUI собирается только с фичей `tui`; без неё крейт — чистый движок
# (компилируется в WASM для GUI-фронтенда).
[[bin]]
name = "sheshbesh"
path = "src/main.rs"
required-features = ["tui"]

[features]
# `parallel` (rayon) — параллельный self-play в обучении; в default, поэтому нативные
# сборки (тесты/примеры/TUI) его получают, а GUI (`default-features = false`) — нет,
# чтобы движок остался компилируемым в WASM (rayon без потоков wasm не работает).
default = ["tui", "parallel"]
tui = ["dep:crossterm", "dep:ratatui"]
parallel = ["dep:rayon"]

[dependencies]
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.30.2", optional = true }
rayon = { version = "1.12.0", optional = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Числовые приведения `as` — намеренные и ограниченные (геометрия доски, кости).
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
# `#[must_use]` на каждом геттере/билдере — слишком шумно.
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# Короткие похожие имена (blocker/blocked и т.п.) допустимы.
similar_names = "allow"
