[package]
name = "sheshbesh-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Движок без TUI-фич — собирается в WASM.
sheshbesh = { path = "..", default-features = false }
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"
leptos_i18n = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"
gloo-timers = { version = "0.4.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.75"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "CssStyleDeclaration", "Storage", "AudioContext", "BaseAudioContext", "AudioContextState", "OscillatorNode", "OscillatorType", "GainNode", "AudioNode", "AudioParam", "AudioDestinationNode", "BiquadFilterNode", "BiquadFilterType", "AudioBuffer", "AudioBufferSourceNode", "Worker", "MessageEvent"] }
wasm-bindgen = "0.2"
