[package]
name = "sheshbesh-server"
version = "0.1.0"
edition = "2024"

[dependencies]
sheshbesh = { path = ".." }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures-util = "0.3"
rand = "0.8"
tokio-stream = "0.1"
